# time_tracker_bot

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  env_example.txt  main.py  pyproject.toml  run_bot.py  setup_db.py  test_imports.py
bot/: __init__.py  analytics_examples.sql  bot.py  database.py  init.sql  setup_database.py
